@@ -1,3 +1,8 @@
+1999-07-26  Ulrich Pfeifer  <upf@de.uu.net>
+
+	* Site.pm: Added CPAN::Config->load call which is required by
+	newer CPAN.pm
+
 Wed May  6 13:26:13 1998  Ulrich Pfeifer  <upf@de.uu.net>
 
 	* mkpackages: Rudimentary CHECKSUMS support
